Agents/simple_agent_app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-agent-app
  labels:
    app: simple-agent-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-agent-app
  template:
    metadata:
      labels:
        app: simple-agent-app
    spec:
      containers:
        - name: app
          #image: simple-agent-app:latest
          image: subuppaluru71/simple-agent-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8501
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8501
            initialDelaySeconds: 10
            periodSeconds: 20
